--- a/artificial-intelligence/ai-service/api-reference/api.yml
+++ b/artificial-intelligence/ai-service/api-reference/api.yml
@@ -2325,7 +2325,7 @@ components:
       properties:
         data:
           type: string
-          description: base64 encoded JSON value of the exported agents with related tools and MCP servers
+          description: The base64 encoded JSON value of the exported agents with related tools and MCP servers.
         checksum:
           type: string
           description: Checksum calculated based on JSON value. Validates if importing JSON is exactly the same as exported one.
