--- a/artificial-intelligence/ai-service/api-reference/api.yml
+++ b/artificial-intelligence/ai-service/api-reference/api.yml
@@ -2328,7 +2328,7 @@ components:
           description: The base64 encoded JSON value of the exported agents with related tools and MCP servers.
         checksum:
           type: string
-          description: Checksum calculated based on JSON value. Validates if importing JSON is exactly the same as exported one.
+          description: Checksum calculated based on JSON value. Validates if importing JSON is exactly the same as the exported one.
     ImportedEntity:
       type: object
       properties:
