--- a/artificial-intelligence/ai-service/api-reference/api.yml
+++ b/artificial-intelligence/ai-service/api-reference/api.yml
@@ -2493,7 +2493,7 @@ components:
         - type: object
           properties:
             importedAt:
-              description: Date of the import process
+              description: Date of the import process.
               type: string
               format: date-time
             jobId:
