--- a/orders/sepa-export/api-reference/api.yml
+++ b/orders/sepa-export/api-reference/api.yml
@@ -23,7 +23,7 @@ paths:
         - name: tenant
           in: path
           description: |-
-            Your Emporix tenant's name.
+            Your Emporix tenan name.
             **Note**: The `tenant` should always be written in lowercase.
           required: true
           schema:
@@ -31,14 +31,14 @@ paths:
           example: ""
         - name: fileId
           in: path
-          description: SEPA Export file's unique identifier.
+          description: SEPA Export file unique identifier.
           required: true
           schema:
             type: string
           example: ""
       responses:
         "200":
-          description: SEPA Export file
+          description: SEPA export file.
           content:
             text/plain:
               schema:
@@ -60,10 +60,6 @@ paths:
       summary: Retrieving a list of export jobs
       description: |-
         Retrieves a list of SEPA Export jobs.
-        
-        ***
-        ### Required scopes
-        * `sepaexport.job_view`
       operationId: GET-sepa-export-list-jobs
       parameters:
         - name: tenant
@@ -137,10 +133,6 @@ paths:
       summary: Creating a new export job
       description: |-
         Creates a new SEPA Export job.
-        
-        ***
-        ### Required scopes
-        * `sepaexport.job_manage`
       operationId: POST-sepa-export-create-job
       parameters:
         - name: tenant
@@ -163,7 +155,7 @@ paths:
         required: true
       responses:
         '201':
-          description: New job id
+          description: New job ID.
           content:
             application/json:
               schema:
@@ -194,10 +186,12 @@ components:
       properties:
         jobId:
           type: string
+          example: 884cf047-94a2-42ae-8a89-7084c3259ef2
         status:
           type: string
         siteCode:
           type: string
+          example: main
         fileId:
           type: string
         active:
